<resources>
    <string name="app_name">AnTime</string>
    <string name="title_home">Home</string>
    <string name="title_generate">Generate</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_capitalized">LOGIN</string>
    <string name="welcome_capitalized">WELCOME</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register_capitalized">REGISTER</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="day">Day</string>
    <string name="change_name">Change Name</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="password_updated">Password Updated!</string>
    <string name="ok">OK</string>
    <string name="passwordUpdatedDescription">Your password has been updated successfully</string>
    <string name="email">Email</string>
    <string name="change_email">Change Email</string>
    <string name="your_web_id">354872117704-9c2j6tqale5d2bpagrggru64ahstrqie.apps.googleusercontent.com</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password_length">Password should be 8 characters long!</string>
    <string name="add_activity">Add Activitiy</string>
    <string name="generate_schedule">Generate Schedule</string>
    <string name="my_tasks">My Tasks</string>
    <string name="to_do_list">To-Do List</string>
    <string name="_0">0</string>
    <string name="completed">Completed</string>
    <string name="create_new_to_do_list">Create New To-Do List</string>
    <string name="create">Create</string>
    <string name="schedule_successfully_generated">Schedule Successfully Generated!</string>
    <string name="successfully_generated_schedule_detail">You schedule has been successfully generated! You can now view your schedule at the home menu.</string>
    <string name="login_in_with_google">Login with Google</string>
    <string name="antime">AnTime</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="profile">Profile</string>
    <string name="my_schedule">My Schedule</string>
    <string name="log_out">Log Out</string>
    <string name="update">Update</string>
    <string name="confirm_current_password">Confirm current password</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="meeting_schedule">Meeting Schedule</string>
    <string name="activity">Activity</string>
    <string-array name="pic_array">
        <item>Choose a PIC</item>
        <item>Christoffel Daniel Yesaya Tambunan</item>
        <item>David Kevin Handel Hutabarat</item>
        <item>Fenny Julistine Tarigan</item>
        <item>Threesna Sharfina</item>
    </string-array>
    <string-array name="programmer_array">
        <item>Choose a Programmer</item>
        <item>Fathurrahman</item>
        <item>Said Muhammad Mazaya</item>
        <item>Wildan Taufik Wibowo Nasution</item>
    </string-array>
</resources>