<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="170dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="15dp"
    app:cardElevation="50dp"
    android:backgroundTint="#F8F8F8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_PasswordUpdated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/green_text"
            android:text="@string/password_updated"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_PasswordUpdatedDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textColor="@color/green_text"
            android:text="@string/passwordUpdatedDescription"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_PasswordUpdated"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_password_mengerti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/green_text"
            android:text="@string/ok"
            android:backgroundTint="@color/green_light"
            android:layout_marginTop="8dp"
            app:cornerRadius="10dp"
            android:elevation="30dp"
            app:layout_constraintEnd_toEndOf="@id/text_PasswordUpdatedDescription"
            app:layout_constraintStart_toStartOf="@id/text_PasswordUpdatedDescription"
            app:layout_constraintTop_toBottomOf="@id/text_PasswordUpdatedDescription"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>