<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.GenerateFragment">

<!--    textview Meeting Scheduled-->
    <TextView
        android:id="@+id/text_Meetings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro"
        android:maxLines="1"
        android:text="@string/meeting_schedule"
        android:includeFontPadding="false"
        android:textColor="#2c673c"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- ScrollView to make layout_listMeetings scrollable -->
    <ScrollView
        android:id="@+id/scroll_meetings"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Meetings"
        app:layout_constraintBottom_toTopOf="@id/text_Activities">

        <!-- LinearLayout inside ScrollView -->
        <LinearLayout
            android:id="@+id/layout_listMeetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <!--    textview Meeting Scheduled-->
    <TextView
        android:id="@+id/text_Activities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro"
        android:maxLines="1"
        android:text="@string/activity"
        android:includeFontPadding="false"
        android:textColor="#2c673c"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_meetings"/>

    <!-- ScrollView to make layout_listActivities scrollable -->
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Activities"
        app:layout_constraintBottom_toTopOf="@id/btn_AddActivities">

        <!-- LinearLayout inside ScrollView -->
        <LinearLayout
            android:id="@+id/layout_listActivities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <!-- Add Activity Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_AddActivities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/custom_button"
        android:text="@string/add_activity"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/sf_pro"
        android:includeFontPadding="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/scroll"
        app:layout_constraintBottom_toTopOf="@id/btn_GenerateSchedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_AddMeeting"/>

    <!-- Add Meeting Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_AddMeeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/custom_button"
        android:text="@string/add_meeting"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/sf_pro"
        android:includeFontPadding="false"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/scroll"
        app:layout_constraintBottom_toTopOf="@id/btn_GenerateSchedule"
        app:layout_constraintStart_toEndOf="@id/btn_AddActivities"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    Button Generate Schedule-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_GenerateSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom_button"
        android:text="@string/generate_schedule"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="@font/sf_pro"
        android:includeFontPadding="false"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintTop_toBottomOf="@id/btn_AddActivities"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
