<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_capitalized"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/textLayoutLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/textWelcome"
        app:layout_constraintTop_toBottomOf="@id/textWelcome">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/login_capitalized"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <ImageView
            android:id="@+id/motif1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/motif_usu1"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="4dp"/>

        <ImageView
            android:id="@+id/motif2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/motif_usu2"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>

        <ImageView
            android:id="@+id/motif3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/motif_usu3"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>

        <ImageView
            android:id="@+id/motif4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/motif_usu4"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/username"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/textLayoutLogin"
        app:layout_constraintStart_toStartOf="@id/textLayoutLogin"
        app:layout_constraintBottom_toTopOf="@id/textInputUsername"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputUsername"
        style="@style/custom_input"
        app:startIconDrawable="@drawable/ic_account_circle_24"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUsername"
        app:layout_constraintBottom_toTopOf="@id/textPassword">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/password"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textInputUsername"
        app:layout_constraintStart_toStartOf="@id/textInputUsername"
        app:layout_constraintBottom_toTopOf="@id/textInputPassword"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/custom_input"
        app:startIconDrawable="@drawable/password"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@id/textPassword">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green_primary"
        android:text="@string/login_capitalized"
        app:cornerRadius="10dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputPassword"
        app:layout_constraintBottom_toTopOf="@id/layoutTextRegister"/>

    <LinearLayout
        android:id="@+id/layoutTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin">

        <TextView
            android:id="@+id/textBelumPunyaAkun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:textSize="16sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/register_capitalized"
            android:textColor="@color/yellow_primary" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="center"
        android:src="@drawable/bg_design"
        android:paddingTop="50dp"
        android:paddingEnd="134dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>