<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#F8F8F8"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        Title Update data form-->
        <TextView
            android:id="@+id/title_UpdateDataForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/sf_pro"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:text="@string/create_new_to_do_list"
            android:textColor="@color/green_primary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        Input Text Layout update data-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_inputUpdateData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green_primary"
            app:boxStrokeWidth="2dp"
            app:layout_constraintBottom_toTopOf="@id/title_ConfirmCurrentPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_UpdateDataForm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_UpdatedData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Title Confirm current password-->
        <TextView
            android:id="@+id/title_ConfirmCurrentPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/sf_pro"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:text="@string/confirm_current_password"
            android:textColor="@color/green_primary"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_inputUpdateData"/>

        <!--        Input Text Layout confrim current password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_inputConfirmCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green_primary"
            app:boxStrokeWidth="2dp"
            app:layout_constraintBottom_toTopOf="@id/button_Update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_ConfirmCurrentPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_ConfrimCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Button Update-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/green_light"
            android:text="@string/update"
            android:textColor="@color/green_primary"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_inputConfirmCurrentPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>